--- a/css/style.css
+++ b/css/style.css
@@ -1673,7 +1673,7 @@ div.footer-copyright button.btn.btn-primary {
   }
 
   div.bg-img.stat-bg {
-      max-width: 100vw;
+      width: 100%;
   }
 
 
