stat bg position relative

--- a/css/style.css
+++ b/css/style.css
@@ -1673,6 +1673,7 @@ div.footer-copyright button.btn.btn-primary {
   }
 
   div.bg-img.stat-bg {
+      position: relative;
       width: 100%;
   }
 
