--- a/css/style.css
+++ b/css/style.css
@@ -1674,6 +1674,7 @@ div.footer-copyright button.btn.btn-primary {
 
   div.bg-img.stat-bg {
       height: 100%;
+      background-attachment: scroll;
   }
 
 
