--- a/css/style.css
+++ b/css/style.css
@@ -1621,7 +1621,12 @@ div.footer-copyright button.btn.btn-primary {
 \*------------------------------------*/
 
 
-@media only screen and (max-width: 991px) {}
+@media only screen and (max-width: 991px) {
+    div.bg-img.stat-bg {
+        height: 100%;
+        background-attachment: scroll;
+    }
+}
 
 @media only screen and (max-width: 767px) {
   .section-header h2.title {
