--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ th, td {
     padding: 0.25rem;
     transition: all 0.3s;  /* Simple transition for hover effect */
     min-width: 100px;
+    font-size: 16px;
 }
 
 th {
