--- a/style.css
+++ b/style.css
@@ -4,14 +4,22 @@ body {
     font-family: 'Varela Round', sans-serif;
 }
 
-table {
+#table-container {
+    display: block;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+    margin: 0 auto;
+    overflow-x: auto;
+}
+
+#table {
     text-align: left;
     position: relative;
     border-collapse: collapse; 
 }
 
 th, td {
-    padding: 0.25rem;
+    padding: 0px 20px;
     transition: all 0.3s;  /* Simple transition for hover effect */
     font-size: 16px;
     text-size-adjust: none;
@@ -22,7 +30,7 @@ th {
     position: sticky;
     position: -webkit-sticky;
     top: 0; /* Don't forget this, required for the stickiness */
-    z-index: 1;
+    z-index: 9999;
 }
 
 th:first-child {
