--- a/style.css
+++ b/style.css
@@ -28,7 +28,13 @@ body {
     display: block;
     height: 100vh;
     width: 100vw;
-    overflow: auto;    
+    overflow: auto;
+}
+
+#updated-container {
+    text-align: center;
+    text-size-adjust: none;
+    font-size: 18px;
 }
 
 #csv {
