--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ h5 {
 
 a {
     color: #6195FF;
+    font-size: 18px;
     text-decoration: none;
     -webkit-transition: 0.2s opacity;
     transition: 0.2s opacity;
@@ -128,7 +129,7 @@ ul, ol {
     text-transform: none;
 }
 
-p.main-desc.white-text {
+p.main-desc {
     font-size: 20px;
 }
 
@@ -182,7 +183,7 @@ p.main-desc.white-text {
     top: 0;
     right: 0;
     bottom: 0;
-    opacity: .5;
+    opacity: .35;
     background: #1C1D21;
 }
 
@@ -366,6 +367,14 @@ nav#nav.navbar.navbar-dark, nav#nav.navbar.navbar-dark.fixed-nav {
     background: #e7e7e7;
 }
 
+.main-nav li a {
+    font-size: 18px;
+}
+
+#navBtn {
+    font-size: 18px;
+}
+
 
 /* -- default nav -- */
 
@@ -374,7 +383,7 @@ nav#nav.navbar.navbar-dark, nav#nav.navbar.navbar-dark.fixed-nav {
         padding: 0px 15px;
     }
     .main-nav li a {
-        font-size: 14px;
+        font-size: 18px;
         -webkit-transition: 0.2s color;
         transition: 0.2s color;
     }
@@ -501,6 +510,7 @@ nav#nav.navbar.navbar-dark, nav#nav.navbar.navbar-dark.fixed-nav {
     }
     .main-nav li {
         border-top: 1px solid rgba(250, 250, 250, 0.1);
+        margin: 10px 0px 20px;
     }
     .main-nav li a {
         display: block;
@@ -1997,10 +2007,11 @@ h2.anl-title {
     text-align: center;
 }
 
-.foot-legal {
+.foot-legal, .legal-body {
     text-align: center;
-    font-size: 10px;
+    font-size: 8px;
     margin: 0px 45px;
+    text-transform: lowercase;
 }
 
 .terms-cont {
