--- a/css/style.css
+++ b/css/style.css
@@ -183,8 +183,8 @@ p.main-desc {
     top: 0;
     right: 0;
     bottom: 0;
-    opacity: .35;
-    background: #1C1D21;
+    opacity: .85;
+    background: #9e9e9e;
 }
 
 
